--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -4,7 +4,7 @@
     Font-size: 50;
     Font-family: Arial;
     background-color:#58D4FD;
-    margin: .1% 10% .1% 10%;
+    margin: 10% 10% .1% 10%;
     height: 20px;
  
 }
