--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,7 +1,7 @@
 .header {
     Text-align:center;
     color:White;
-    Font-size: 50;
+    Font-size:medium;
     Font-family: Arial;
     background-color:#58D4FD;
     margin: 1% 10% .1% 10%;
@@ -12,7 +12,7 @@
 .nav {
     text-align:center;
     color:White;
-    font-size: 50;
+    font-size: medium;
     font-family: Arial;
     background-color:#86D7F2;
     margin: .1% 10% .1% 10%;
@@ -28,7 +28,7 @@
     float:left;
     text-align:center;
     color:White;
-    font-size: 50;
+    font-size: medium;
     font-family: Arial;
 }
 
@@ -40,7 +40,7 @@
     width: 19.9%;
     text-align:center;
     color:White;
-    font-size: 50;
+    font-size: medium;
     font-family: Arial;
 }
 
