--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,7 +1,7 @@
 .header {
     Text-align:center;
     color:White;
-    Font-size:100%;
+    Font-size:30px;
     Font-family: Arial;
     background-color:#58D4FD;
     margin: 5% 10% .1% 10%;
