--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -12,11 +12,11 @@
 .nav {
     text-align:center;
     color:White;
-    font-size: 100%;
+    font-size: 30px;
     font-family: Arial;
     background-color:#86D7F2;
     margin: .1% 10% .1% 10%;
-    height: 50px;
+    padding: 10px;
 }
     
     
@@ -28,7 +28,7 @@
     float:left;
     text-align:center;
     color:White;
-    font-size: 100%;
+    font-size: 30px;
     font-family: Arial;
 }
 
@@ -40,7 +40,7 @@
     width: 19.9%;
     text-align:center;
     color:White;
-    font-size: 100%;
+    font-size: 30px;
     font-family: Arial;
 }
 
