--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -58,14 +58,14 @@
 }
 
 a:hover {
-    color: #ffffcc;
+    color: #66b2ff;
 }
 
 a:active {
-    color:#ffe5ff;
+    color:#66b2ff;
 }
 
 a:visited {
-    color:#ffe5ff;
+    color:#66b2ff;
 }
 
