--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -58,11 +58,11 @@
 }
 
 a:link {
-    color:#ffffff;
+    color: #6600ff;
 }
 
 a:visited {
-    color:#aa80ff;
+    color:#a200cc;
 }
 
 a:hover {
