--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -18,6 +18,17 @@
     margin: .1% 10% .1% 10%;
     padding: 10px;
 }
+
+.navbutton {
+    background-color: blue;
+    border: none;
+    color: white;
+    padding: 5px 10px 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
     
     
 .leftside {
