--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -20,14 +20,14 @@
 }
 
 .navbutton {
-    background-color: blue;
+    background-color: #7DCCE7;
     border: none;
     color: white;
     padding: 5px 10px 5px 10px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 30px;
 }
     
     
