--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -20,7 +20,7 @@
 }
 
 .navbutton {
-    background-color: #7DCCE7;
+    background-color: #0089e6;
     border: none;
     color: white;
     padding: 5px 10px 5px 10px;
@@ -68,18 +68,11 @@
     padding: 5px
 }
 
-a:link {
-    color: #6600ff;
-}
-
-a:visited {
-    color:#a200cc;
-}
 
 a:hover {
     color: #6697ff;   
 }
 
-a:actice {
+a:active {
     color:#aa80ff;
 }
