--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -28,6 +28,8 @@
     text-decoration: none;
     display: inline-block;
     font-size: 30px;
+    border-radius: 75%;
+    transition-duration: 0.4;
 }
     
     
@@ -70,7 +72,7 @@
 
 
 a:hover {
-    color: #6697ff;   
+    color: #99d4ff;   
 }
 
 a:active {
