--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -28,10 +28,30 @@
     text-decoration: none;
     display: inline-block;
     font-size: 30px;
-    border-radius: 75%;
-    transition-duration: 0.4;
+    border-radius: 90%;
+    cursor: pointer;
 }
-    
+
+.button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+.button span:after {
+    content: ">>";
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.button:hover span:after {
+    opacity: 1;
+    right: 0;
+}
     
 .leftside {
     background-color:#7DCCE7;
