--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -28,7 +28,7 @@
     text-decoration: none;
     display: inline-block;
     font-size: 30px;
-    border-radius: 90%;
+    border-radius: 12px;
     cursor: pointer;
 }
 
