--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -67,8 +67,8 @@
 }
 
 .welcomepicture {
-    floart:left;
-    margin: .1% .1% .1% 10%;
+    float:left;
+    margin: 5%% .1% .1% 10%;
 }
 
 .rightside {
