--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -33,27 +33,6 @@
     cursor: pointer;
 }
 
-.button span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-}
-
-.button span:after {
-    content: ">>";
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-}
-
-.button:hover span:after {
-    opacity: 1;
-    right: 0;
-}
-    
 .leftside {
     background-color:#7DCCE7;
     margin: 0 .1% .1% 10%;
@@ -81,6 +60,11 @@
     color:White;
     font-size: 30px;
     font-family: Arial;
+}
+
+,mypicture {
+    display:block;
+    margin: auto;
 }
 
 .footer {
