--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -47,8 +47,7 @@
 
 .welcomepicture {
     display: block;
-    margin: 1.25% auto auto auto;
-    padding-top: 1.25%;
+    margin: auto auto auto auto;
 }
 
 .rightside {
