--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -1,1 +1,11 @@
-
+.leftbar {
+    background-color: #7DCCE7;
+    float:left;
+    margin: 0 auto .1% 0;
+    height: 600px;
+    width: 19.9%;
+    text-align:center;
+    color:White;
+    font-size: 30px;
+    font-family: Arial;
+}
