--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -1,7 +1,7 @@
 .leftbar {
     background-color: #7DCCE7;
     float:left;
-    margin: 0 auto .1% 0;
+    margin: 0 .1% .1% 10%;
     height: 600px;
     width: 19.9%;
     text-align:center;
