--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -9,3 +9,15 @@
     font-size: 30px;
     font-family: Arial;
 }
+
+.rightbar {
+    background-color:#7DCCE7;
+    margin: 0 auto .1% 0;
+    height: 600px;
+    width: 60%;
+    float:left;
+    text-align:center;
+    color:White;
+    font-size: 30px;
+    font-family: Arial;
+}
