--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -8,11 +8,11 @@
     color:White;
     font-size: 30px;
     font-family: Arial;
-    padding: auto;
+    padding: 5px;
 }
 
 .intropadding {
-    padding: auto;
+    padding: 5px;
 }
 
 .rightbar {
