--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -11,9 +11,10 @@
 }
 
 .intropadding {
-    margin: 10% 5% 10% 5%;
+    margin: 5% 5% 5% 5%;
     padding: 5%;
     display: block;
+    font-size: 100%;
    
 }
 
