--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -31,6 +31,7 @@
     font-size: 30px;
     border-radius: 12px;
     cursor: pointer;
+    box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2), 0 3px 20px 0 rgba(0,0,0,0.19);
 }
 
 .leftside {
