--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -4,14 +4,13 @@
     margin: 0 .1% .1% 10%;
     height: 600px;
     width: 19.9%;
-    color:White;
-    font-size: 20px;
     font-family: Arial;
     
 }
 
 .intropadding {
     margin: 5% 5% 2.5% 2.5%;
+    padding: 4%;
     display: block;
     font-weight: bold;
     background-color: #0089e6;
@@ -21,10 +20,13 @@
     border-radius: 12px;
     cursor: pointer;
     box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2), 0 3px 20px 0 rgba(0,0,0,0.19);
+    color: white;
+    font-size: 30px;
 }
 
 .articlepadding {
     margin: 0 5% 1% 5%;
+    padding: 4%;
     display: block;
     font-weight: bold;
     background-color: #0089e6;
@@ -34,6 +36,8 @@
     border-radius: 12px;
     cursor: pointer;
     box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2), 0 3px 20px 0 rgba(0,0,0,0.19);
+    color: white;
+    font-size: 20px;
 }
 
 .rightbar {
