--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -49,8 +49,8 @@
 .welcomepicture {
     display: block;
     margin: 1.25% auto auto auto;
-    width: auto;
-    height: auto;
+    max-width: auto;
+    max-height: auto;
 }
 
 .rightside {
@@ -68,8 +68,8 @@
 .mypicture {
     display:block;
     margin: 4.5% auto auto auto;
-    width: auto;
-    height: auto;
+    max-width: auto;
+    max-height: auto;
 }
 
 .footer {
