--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -1,7 +1,7 @@
 .leftbar {
     background-color: #7DCCE7;
     float:left;
-    margin: 0 .1% 100% 10%;
+    margin: 0 .1% auto 10%;
     height: auto;
     width: 19.9%;
     font-family: Arial;
@@ -26,7 +26,7 @@
 
 .articlepadding {
     margin: 0 5% 1% 5%;
-    padding: 4%;
+    padding: 2%;
     display: block;
     font-weight: bold;
     background-color: #0089e6;
