--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -2,9 +2,10 @@
     background-color: #7DCCE7;
     float:left;
     margin: 0 .1% auto 10%;
-    height: 125%;
+    height: 100%;
     width: 19.9%;
     font-family: Arial;
+    padding: 0 0 5% 0;
  }
 
 .intropadding {
