--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -25,7 +25,7 @@
 }
 
 .articlepadding {
-    margin: 0 5% 1% 5%;
+    margin: 2% 5% 1% 5%;
     padding: 2%;
     display: block;
     font-weight: bold;
