--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -36,7 +36,7 @@
 
 .leftside {
     background-color:#7DCCE7;
-    margin: 0 .1% 2% 10%;
+    margin: 0 .1% 0 10%;
     height: auto;
     width: 60%;
     float:left;
@@ -48,7 +48,7 @@
 
 .welcomepicture {
     display: block;
-    margin: 1.25% auto auto auto;
+    margin: 1.25% auto 2% auto;
     max-width: 100%;
     max-height: 100%;
 }
@@ -56,7 +56,7 @@
 .rightside {
     background-color: #7DCCE7;
     float:left;
-    margin: 0 auto 2% 0;
+    margin: 0 auto 0 0;
     height: auto;
     width: 19.9%;
     text-align:center;
@@ -68,7 +68,7 @@
 
 .mypicture {
     display:block;
-    margin: 4.5% auto auto auto;
+    margin: 4.5% auto 2% auto;
     max-width: 100%;
     max-height: 100%;
 }
