--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -54,3 +54,14 @@
 .rightbartext{
     margin: 5% 5% 5% 5%;
 }
+
+.code {
+    border:1px solid black;
+    background-color:#FFF8C6;
+    width:auto;
+    overflow:auto;    
+    padding:10px;
+}
+.code code {
+    font-size:0.9em;
+}
