--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -82,7 +82,7 @@
     font-size: 30px;
     font-family: Arial;
     text-align: center;
-    padding 10%;
+    padding 5% 5% 5% 5%5;
 }
 
 .footer {
