--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -75,7 +75,7 @@
 
 .middlesection {
     background-color: #7DCCE7;
-    margin: 0 10% 0 10%;
+    margin: 5% 10% 5% 10%;
     height: auto;
     color: white;
     font-size: 30px;
