--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -75,13 +75,13 @@
 
 .middlesection {
     background-color: #7DCCE7;
-    margin: 0 10% 0 10%;
+    margin: 50px 10% 50px 10%;
     height: auto;
     color: white;
     font-size: 30px;
     font-family: Arial;
     text-align: center;
-    padding: 50px 0 50px 0; 
+
     
 }
 
