--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -45,7 +45,7 @@
 .rightbar {
     background-color:#7DCCE7;
     margin: 0 auto .1% 0;
-    height: auto;
+    height: 100%;
     width: 60%;
     float: left;
     color:White;
