--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,6 +1,7 @@
 .header {
+    text-align: center;
     color:White;
-    Font-size:30px;
+    Font-size: 20px;
     Font-family: Arial;
     background-color:#95B8D1;
     padding:15px;
