--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -3,7 +3,7 @@
     color:White;
     Font-size: 20px;
     Font-family: Arial;
-    background-color:#809BCE;
+    background-color:#95B8D1;
     padding: 15px;
     font-weight: bold;
     width: 100%;
@@ -12,14 +12,12 @@
 }
 
 .nav {
-    position: fixed;
     text-align: center;
     color:White;
     font-size: 30px;
     font-family: Arial;
-    background-color:#95B8D1;
+    background-color: #809BCE;
     width 100%;
-    opacity: 0.5;
     padding: 15px;
 }
 
@@ -39,41 +37,24 @@
 
 .leftside {
     background-color:#7DCCE7;
-    margin: 0 .1% 0 10%;
-    height: auto;
-    width: 60%;
+    height: 50%;
+    width: 300px;
     float:left;
     text-align:center;
     color:White;
     font-size: 30px;
     font-family: Arial;
-}
-
-.welcomepicture {
-    display: block;
-    margin: 1.25% auto 1.75% auto;
-    max-width: 100%;
-    max-height: 100%;
 }
 
 .rightside {
     background-color: #7DCCE7;
     float:left;
-    margin: 0 auto 0 0;
-    height: auto;
-    width: 19.9%;
+    height: 300px;
+    width: 30%;
     text-align:center;
     color:White;
     font-size: 30px;
     font-family: Arial;
-    
-}
-
-.mypicture {
-    display:block;
-    margin: 4.5% auto 4.5% auto;
-    max-width: 100%;
-    max-height: 100%;
 }
 
 .middlesection {
@@ -89,9 +70,8 @@
 }
 
 .footer {
-    background-color: #58D4FD;
+    background-color: #95B8D1;
     clear:both;
-    margin: auto 10% 1% 10%;
     text-align:center;
 }
 
