--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -41,8 +41,8 @@
 
 .leftside {
     background-color:#818D92;
-    height: 300px;
-    width: 70%;
+    height: auto;
+    width: 100%;
     float: left;
     text-align:center;
     color:White;
@@ -50,16 +50,6 @@
     font-family: Arial;
 }
 
-.rightside {
-    background-color: #586A6A;
-    float: right;
-    height: 300px;
-    width: 30%;
-    text-align:center;
-    color:White;
-    font-size: 30px;
-    font-family: Arial;
-}
 
 .middlesection {
     background-color: #7DCCE7;
@@ -77,8 +67,8 @@
     background-color: #95B8D1;
     clear:both;
     text-align:center;
-    border-left: 15em;
-    border-right: 15em;
+    border-left: 20em;
+    border-right: 20em;
     border-left-color: #809BCE;
     border-right-color: #809BCE;
     border-style: solid;
