--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -21,7 +21,6 @@
     color:White;
     font-size: 30px;
     font-family: Arial;
-
     width 100%;
     padding: 15px;
 }
@@ -35,7 +34,7 @@
     text-decoration: none;
     display: inline-block;
     font-size: 25px;
-
+    border-radius: 12px;
     cursor: pointer;
     box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2), 0 3px 20px 0 rgba(0,0,0,0.19);
 }
