--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,3 +1,8 @@
+.body{
+   background-image:url(http://i.imgur.com/LMNmPL1.jpg);
+   background-repeat:no-repeat;
+   background-size:cover;
+}
 
 .header {
     text-align: center;
