--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,7 +1,3 @@
-body  {
-    background-image: url("http://i.imgur.com/LMNmPL1.jpg");
-}
-
 .header {
     text-align: center;
     color:White;
@@ -43,7 +39,7 @@ body  {
 }
 
 .leftside {
-    background-color:#818D92;
+    background-color: #EDEDED;
     height: auto;
     width: 100%;
     float: left;
@@ -51,6 +47,11 @@ body  {
     color:White;
     font-size: 5px;
     font-family: Arial;
+    border-left: 15em;
+    border-right: 15em;
+    border-left-color: #818D92;
+    border-right-color: #818D92;
+    border-style: solid;
 }
 
 
