--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -41,7 +41,7 @@
 .leftside {
     background-color: #EDEDED;
     height: auto;
-    width: 100%;
+    width: auto;
     float: left;
     text-align:center;
     color:White;
