--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -39,7 +39,7 @@
 }
 
 .leftside {
-    background-color: #EDEDED;
+    background-image: url("http://i.imgur.com/LMNmPL1.jpg");
     height: auto;
     width: 100%;
     float: left;
