--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -48,7 +48,7 @@
     font-size: 5px;
     font-family: Arial;
     padding: 3% 0 3% 0;
-    background: rgba(54, 25, 25, .5);
+    opacity: 0.5;
 }
 
 
