--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -3,15 +3,15 @@
     color:White;
     Font-size: 20px;
     Font-family: Arial;
-    background-color:#95B8D1;
+    background-color:#A79292;
     padding: 15px;
     font-weight: bold;
     width: auto;
     height: auto;
     border-left: 15em;
     border-right: 15em;
-    border-left-color: #809BCE;
-    border-right-color: #809BCE;
+    border-left-color: #6A5959;
+    border-right-color: #6A5959;
     border-style: solid;
  }
 
