--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -14,7 +14,7 @@
     padding: 3%;
     display: block;
     font-weight: bold;
-    background-color: #0089e6;
+    background-color: #6A5959;
     border: none;
     text-align: center;
     display: inline-block;
@@ -31,7 +31,7 @@
     padding: 2%;
     display: block;
     font-weight: bold;
-    background-color: #0089e6;
+    background-color: #6A5959;
     border: none;
     text-align: center;
     display: inline-block;
