--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -57,6 +57,13 @@
     margin: 5% 5% 5% 5%;
 }
 
+.line {
+    background-color: black;
+    height: .5px;
+    width: .5 px; 
+    margin: 1% auto 1% auto;
+}
+
 .code {
     border:1px solid black;
     background-color:#FFF8C6;
