--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -60,8 +60,9 @@
 .line {
     background-color: black;
     height: .5px;
-    width: .5 px; 
+    width: 80%; 
     margin: 1% auto 1% auto;
+    padding: 10px auto 10px auto;
 }
 
 .code {
