--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -61,7 +61,7 @@
     background-color: black;
     height: .5px;
     width: 80%; 
-    margin: 1% auto 1% auto;
+    margin: 10px auto 10px auto;
     padding: 10px auto 10px auto;
 }
 
