--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -65,6 +65,18 @@
     padding: 10px auto 10px auto;
 }
 
+.blog-footer {
+    background-color: #A79292;
+    clear:both;
+    text-align:center;
+    border-left: 5em;
+    border-right: 5em;
+    border-left-color: #6A5959;
+    border-right-color: #6A5959;
+    border-style: solid;
+    width: 80%;
+}
+
 .code {
     border:1px solid black;
     background-color:#FFF8C6;
