--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -74,6 +74,7 @@
     border-left-color: #6A5959;
     border-right-color: #6A5959;
     border-style: solid;
+    margin: 10px auto 10px auto;
     width: 80%;
 }
 
