--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -69,13 +69,13 @@
     background-color: #A79292;
     clear:both;
     text-align:center;
-    border-left: 15em;
-    border-right: 15em;
+    border-left: 150m;
+    border-right: 10em;
     border-left-color: #6A5959;
     border-right-color: #6A5959;
     border-style: solid;
-    margin: 10px auto 10px 60%;
-    width: 60%;
+    margin: 10px auto 10px 40%;
+    width: 40%;
 }
 
 .code {
