--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -69,12 +69,12 @@
     background-color: #A79292;
     clear:both;
     text-align:center;
-    border-left: 150m;
-    border-right: 10em;
+    border-left: 15em;
+    border-right: 15em;
     border-left-color: #6A5959;
     border-right-color: #6A5959;
     border-style: solid;
-    margin: 10px auto 10px 40%;
+    margin: 10px auto 10px 45%;
     width: 40%;
 }
 
