--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -52,7 +52,7 @@
 
 
 .middlesection {
-    background-color: #6A5959;
+    background-color: #A79292;
     height: auto;
     width 100%;
     color: white;
