--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -58,7 +58,7 @@
     color: white;
     font-size: 30px;
     font-family: Arial;
-    text-align: center;
+    text-align: left;
     padding: 50px 0 50px 0;
     border-left: 15em;
     border-right: 15em;
