--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -65,7 +65,7 @@
     border-left-color: #6A5959;
     border-right-color: #6A5959;
     border-style: solid;
-    
+    padding: 25%;
 }
 
 .footer {
