--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -62,7 +62,7 @@
     border-left-color: #6A5959;
     border-right-color: #6A5959;
     border-style: solid;
-    padding: 0 25% 0 25%;
+    padding: 3% 25% 3% 25%;
 }
 
 .middlesection {
@@ -85,8 +85,8 @@
     background-color: #A79292;
     clear:both;
     text-align:center;
-    border-left: 18em;
-    border-right: 18em;
+    border-left: 19em;
+    border-right: 19em;
     border-left-color: #6A5959;
     border-right-color: #6A5959;
     border-style: solid;
