--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -72,7 +72,7 @@
     color: white;
     font-size: 25px;
     font-family: Arial;
-    text-align: left;
+    text-align: center;
     border-left: 12em;
     border-right: 12em;
     border-left-color: #6A5959;
