--- a/index.css
+++ b/index.css
@@ -17,6 +17,10 @@ nav {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    -webkit-transition: background-color 0.5s ease;
+    -moz-transition: background-color 0.5s ease;
+    -o-transition: background-color 0.5s ease;
+    transition: background-color 0.5s ease;
 }
 
 .nav-container {
@@ -30,6 +34,36 @@ nav {
     cursor: pointer;
 }
 
-.nav-container:hover {
-    border-bottom: 2px solid #3b5998;
+.nav-container::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #000;
+    -webkit-transition: width 0.5s ease;
+    -moz-transition: width 0.5s ease;
+    -o-transition: width 0.5s ease;
+    transition: width 0.5s ease;
+}
+
+.nav-container:hover::after {
+    width: 100%;
+}
+
+.home-container {
+    width: 100%;
+    height: 600px;
+    background: red;
+}
+
+.about-container {
+    width: 100%;
+    height: 600px;
+    background: blue;
+}
+
+.project-container {
+    width: 100%;
+    height: 600px;
+    background: tan;
 }
