--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@ nav {
 }
 
 .nav-container {
+    opacity: 0;
     margin: 0 15px;
     font-size: 20px;
     font-weight: bold;
@@ -33,6 +34,7 @@ nav {
     outline: none;
     cursor: pointer;
     padding: 15px 0px;
+    transform: translateY(-100px);
 }
 
 .nav-container::after {
