--- a/index.css
+++ b/index.css
@@ -22,16 +22,12 @@ nav {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    -webkit-transition: background-color 0.5s ease;
-    -moz-transition: background-color 0.5s ease;
-    -o-transition: background-color 0.5s ease;
-    transition: background-color 0.5s ease;
     position: fixed;
     top: 0;
     left: 0;
 }
 
-.nav-container {
+.nav-button-container {
     opacity: 0;
     margin: 0 15px;
     font-size: 20px;
@@ -77,4 +73,11 @@ nav {
     width: 100%;
     height: 600px;
     background: tan;
+}
+
+.half-transition {
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
