--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
 }
 
 body {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: teal;
 }
 
@@ -73,18 +74,26 @@ nav {
     flex-wrap: wrap;
 }
 
-.left-home-container img {
+.profile-image-container {
     width: 100%;
-    max-width: 150px;
     text-align: center;
 }
 
+.profile-image-container img {
+    width: 100%;
+    max-width: 150px;
+    border-radius: 50%;
+}
+
 .left-home-container h3 {
+    width: 100%;
     text-align: center;
 }
 
 .left-home-container h4 {
+    width: 100%;
     text-align: center;
+    margin: 0px;
 }
 
 .right-home-container {
@@ -118,6 +127,6 @@ nav {
     transition: all 0.5s ease;
 }
 
-.normalize-margin {
-    margin-top: 0px;
+.zero-margin {
+    margin: 0px;
 }
