--- a/index.css
+++ b/index.css
@@ -64,6 +64,7 @@ nav {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    margin: 25px 0;
 }
 
 .left-home-container {
@@ -106,6 +107,7 @@ nav {
 
 .right-home-container p {
     width: 100%;
+    margin-top: 0px;
 }
 
 .about-container {
