--- a/index.css
+++ b/index.css
@@ -14,11 +14,12 @@ body {
 .master-inner-container {
     width: 100%;
     max-width: 1200px;
-    margin: 55px auto 0 auto;
+    padding: 55px 15px 55px 15px;
 }
 
 nav {
     width: 100%;
+    height: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -64,7 +65,7 @@ nav {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin: 25px 0;
+    margin: 25px 0px 50px 0px;
 }
 
 .left-home-container {
