--- a/index.css
+++ b/index.css
@@ -4,7 +4,6 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: teal;
 }
 
 .master-outer-container {
@@ -15,6 +14,7 @@ body {
     width: 100%;
     max-width: 1200px;
     padding: 60px 15px 60px 15px;
+    margin: 0 auto;
 }
 
 nav {
@@ -79,23 +79,30 @@ nav {
 .profile-image-container {
     width: 100%;
     text-align: center;
+    opacity: 0;
+    transform: translateY(-200px);
 }
 
 .profile-image-container img {
     width: 100%;
     max-width: 150px;
     border-radius: 50%;
+    border: 0px solid white;
+    opacity: 1;
+    padding: 5px;
 }
 
 .left-home-container h3 {
     width: 100%;
     text-align: center;
+    opacity: 0;
 }
 
 .left-home-container h4 {
     width: 100%;
     text-align: center;
     margin: 0px;
+    opacity: 0;
 }
 
 .right-home-container {
