--- a/index.css
+++ b/index.css
@@ -12,12 +12,12 @@ body {
 
 .master-inner-container {
     width: 100%;
-    max-width: 1200px;
-    padding: 60px 15px 60px 15px;
+    max-width: 800px;
+    padding: 0px 15px 0px 15px;
     margin: 0 auto;
 }
 
-nav {
+.nav-container {
     width: 100%;
     height: 60px;
     display: flex;
@@ -44,7 +44,7 @@ nav {
     transform: translateY(-100px);
 }
 
-.nav-container::after {
+.nav-button-container::after {
     content: '';
     display: block;
     width: 0;
@@ -56,7 +56,7 @@ nav {
     transition: width 0.5s ease;
 }
 
-.nav-container:hover::after {
+.nav-button-container:hover::after {
     width: 100%;
 }
 
@@ -66,7 +66,11 @@ nav {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin: 0px 0px 60px 0px;
+    padding: 60px 0px 60px 0px;
+    background-image: url(images/home-background.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .left-home-container {
@@ -117,6 +121,8 @@ nav {
 .right-home-container p {
     width: 100%;
     margin-top: 0px;
+    opacity: 0;
+    transform: translateX(200px);
 }
 
 .right-home-container p:last-child {
