--- a/index.css
+++ b/index.css
@@ -73,7 +73,15 @@ body {
     background-size: contain;
 }
 
-.left-home-container {
+.about-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.left-about-container {
     width: 35%;
     display: flex;
     align-items: center;
@@ -97,20 +105,20 @@ body {
     padding: 5px;
 }
 
-.left-home-container h3 {
+.left-about-container h3 {
     width: 100%;
     text-align: center;
     opacity: 0;
 }
 
-.left-home-container h4 {
+.left-about-container h4 {
     width: 100%;
     text-align: center;
     margin: 0px;
     opacity: 0;
 }
 
-.right-home-container {
+.right-about-container {
     width: 65%;
     display: flex;
     align-items: center;
@@ -118,22 +126,18 @@ body {
     flex-wrap: wrap;
 }
 
-.right-home-container p {
+.right-about-container p {
     width: 100%;
     margin-top: 0px;
     opacity: 0;
     transform: translateX(200px);
 }
 
-.right-home-container p:last-child {
+.right-about-container p:last-child {
     margin-bottom: 0px;
 }
 
-.about-container {
-    width: 100%;
-    height: 600px;
-    background: blue;
-}
+
 
 .project-container {
     width: 100%;
