--- a/index.css
+++ b/index.css
@@ -36,6 +36,7 @@ body {
     font-size: 20px;
     font-weight: bold;
     font-family: arial;
+    color: black;
     border: none;
     background: none;
     outline: none;
@@ -62,15 +63,26 @@ body {
 
 .home-container {
     width: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    padding: 60px 0px 60px 0px;
+    padding: 100px 0px 60px 0px;
+    position: relative;
+}
+
+.home-bg-container {
+    width: 100%;
+    opacity: 0;
+    left: 0;
+    top: 0;
+    position: absolute;
     background-image: url(images/home-background.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    z-index: -100;
 }
 
 .profile-home-image-container {
