--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ body {
     font-size: 20px;
     font-weight: bold;
     font-family: arial;
-    color: black;
+    color: #3b5998;
     border: none;
     background: none;
     outline: none;
@@ -50,7 +50,7 @@ body {
     display: block;
     width: 0;
     height: 2px;
-    background: #000;
+    background: #3b5998;
     -webkit-transition: width 0.5s ease;
     -moz-transition: width 0.5s ease;
     -o-transition: width 0.5s ease;
