--- a/index.css
+++ b/index.css
@@ -69,7 +69,8 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     padding: 100px 0px 60px 0px;
-    position: relative;
+    position: relative; 
+    cursor: default;
 }
 
 .home-bg-container {
@@ -102,7 +103,7 @@ body {
 
 #cloud-1 {
     width: 100%;
-    max-width: 150px;
+    max-width: 175px;
     position: absolute;
     left: 0;
     top: 20%;
@@ -114,8 +115,8 @@ body {
     width: 100%;
     max-width: 250px;
     position: absolute;
-    left: 10%;
-    top: 15%;
+    left: 5%;
+    top: 20%;
     opacity: 0;
     z-index: -60;
 }
@@ -132,7 +133,7 @@ body {
 
 #cloud-4 {
     width: 100%;
-    max-width: 100px;
+    max-width: 150px;
     position: absolute;
     left: 80%;
     top: 35%;
@@ -144,7 +145,7 @@ body {
     width: 100%;
     max-width: 350px;
     position: absolute;
-    left: 40%;
+    left: 30%;
     top: 0;
     opacity: 0;
     z-index: -90;
@@ -172,11 +173,20 @@ body {
     opacity: 0;
 }
 
+.main-home-container h3:hover{
+    color: #3b5998;
+}
+
+
 .main-home-container h4 {
     width: 100%;
     text-align: center;
     margin: 0px;
     opacity: 0;
+}
+
+.main-home-container h4:hover{
+    color: #3b5998;
 }
 
 .about-container {
