--- a/index.css
+++ b/index.css
@@ -10,12 +10,6 @@ body {
     width: 100%;
 }
 
-.master-inner-container {
-    width: 100%;
-    max-width: 800px;
-    padding: 0px 15px 0px 15px;
-    margin: 0 auto;
-}
 
 .nav-container {
     width: 100%;
@@ -63,6 +57,9 @@ body {
 
 .home-container {
     width: 100%;
+    max-width: 800px;
+    padding: 0px 15px 0px 15px;
+    margin: 0 auto;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -190,11 +187,19 @@ body {
 }
 
 .about-container {
+    width: 100%; 
+}
+
+.about-inner-container {
     width: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    max-width: 800px;
+    padding: 0px 15px 0px 15px;
+    margin: 0 auto;
 }
 
 .left-about-container {
