--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
 }
 
 .master-outer-container {
@@ -208,6 +209,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    margin-right: 25px;
 }
 
 .profile-about-image-container {
@@ -240,7 +242,7 @@ body {
 }
 
 .right-about-container {
-    width: 65%;
+    width: calc(65% - 25px);
     display: flex;
     align-items: center;
     justify-content: center;
