--- a/index.css
+++ b/index.css
@@ -7,10 +7,16 @@ body {
     margin: 0;
 }
 
+a {
+    font-weight: bold;
+    color:#00274c;
+    outline: none;
+    text-decoration: none;
+}
+
 .master-outer-container {
     width: 100%;
 }
-
 
 .nav-container {
     width: 100%;
@@ -28,16 +34,19 @@ body {
 .nav-button-container {
     opacity: 0;
     margin: 0 15px;
-    font-size: 20px;
-    font-weight: bold;
-    font-family: arial;
-    color: #3b5998;
     border: none;
     background: none;
     outline: none;
     cursor: pointer;
     padding: 15px 0px;
     transform: translateY(-100px);
+}
+
+.nav-link {
+    color: #3b5998;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: arial;
 }
 
 .nav-button-container::after {
@@ -58,10 +67,10 @@ body {
 
 .home-container {
     width: 100%;
+    height: 90vh;
     max-width: 800px;
     padding: 0px 15px 0px 15px;
     margin: 0 auto;
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -193,13 +202,12 @@ body {
 
 .about-inner-container {
     width: 100%;
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
     max-width: 800px;
-    padding: 0px 15px 0px 15px;
+    padding: 50px 15px 50px 15px;
     margin: 0 auto;
     cursor: default;
 }
@@ -356,6 +364,10 @@ body {
     -webkit-animation-iteration-count: 1;
     animation-iteration-count: 1;
   }
+
+.gold-color {
+    color: #f9d71c;
+}
 
 .half-transition {
     -webkit-transition: all 0.5s ease;
